Fix icon tablet

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ body {
 
   .testimony--1 {
     grid-column: 1/3;
-    background-position: top right 6rem;
+    background-position: top right 17rem;
   }
 
   .testimony--2 {
